# trusty-rust-examples

./: .gitignore
examples/error_handling/: Cargo.toml
examples/error_handling/src/: main.rs
examples/fizz_buzz/: Cargo.toml
examples/fizz_buzz/src/: ex1_functional.rs  ex2_pattern_matching.rs  ex3_generic.rs  ex4_from_trait.rs  main.rs
examples/struct_with_paste/: Cargo.toml
examples/struct_with_paste/src/: main.rs
examples/wasm-pack-advanced/wasm-from-rust/: Cargo.toml  LICENSE_MIT
examples/wasm-pack-advanced/wasm-from-rust/src/: lib.rs  process_data.rs  structs_js.rs
examples/wasm-pack-advanced/wasm-in-nodejs/: .gitignore  README.md  package-lock.json  package.json
examples/wasm-pack-advanced/wasm-in-nodejs/src/: index.ts
examples/wasm-pack/wasm-from-rust/: Cargo.toml  LICENSE_MIT  README.md
examples/wasm-pack/wasm-from-rust/src/: lib.rs
examples/wasm-pack/wasm-in-nodejs/: README.md  package-lock.json
examples/wasm-pack/wasm-in-nodejs/src/: index.ts
examples/web-socket/rust-server/: Cargo.toml
examples/web-socket/rust-server/src/web_socket/: mod.rs
examples/web-socket/rust-socket-server/: Cargo.toml
examples/web-socket/rust-socket-server/src/: main.rs
examples/web-socket/rust-socket-server/src/web_socket/: mod.rs  ws_open_sockets.rs  ws_subscribe.rs
examples/web-socket/web-socket-client/: index.html
