[package]
name = "struct_with_paste"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
hex = "0.4.3"
macro_rules_attribute = "0.0.2"
paste = "1.0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.78"
