[package]
name = "rust-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
tokio-tungstenite = "0.16.1"
tokio = { version = "1.6.1", features = ["full"] }
futures = "0.3.15"
futures-util = { version = "0.3", default-features = false, features = [
    "async-await",
    "sink",
    "std",
] }
serde_json = "1.0.64"
serde = { version = "1.0.126", features = ["derive"] }
crossbeam-channel = "0.5.1"
